--- a/Assets/css/review.css
+++ b/Assets/css/review.css
@@ -1,13 +1,30 @@
 ﻿ textarea {
     max-width: 900px !important;
+    margin-left:0px;
 }
 
-#review-text{
-    width: 500px;
+#comment{
+    height: 190px;
+    width: 100%;
 }
 
 .selectpicker form-control{
     width: 200px;
 }
 
+.inlinelabel label {
+    /* Other styling... */
+    text-align: right;
+    clear: both;
+    float: left;
+    margin-right: 15px;
+}
 
+#submit-btn {
+    width: 200px;
+    margin-top: 20px;
+}
+
+.review-container{
+    margin-left: 100px;
+}
