--- a/Views/Review.cshtml
+++ b/Views/Review.cshtml
@@ -27,33 +27,39 @@
                                 <div class="col-sm-6 mt-20">
                                     <form action="#">
                                         <div class="form-group">
+                                            <!--University select-->
                                             <label for="university-select">Select university</label>
-                                            <select class="selectpicker form-control" id="university-select" name="sellist1" onchange="getSelectValue();">
+                                            <select class="selectpicker form-control" id="university-select" onchange="getSelectValue();">
                                                 <option value="" selected disabled hidden>Please select</option>
                                                 @foreach (University uni in ViewBag.Universities)
                                                 {
                                                     <option>@uni.Title</option>
                                                 }
                                             </select>
+                                            <!--check that function works-->
                                             <p id="demo"></p>
+                                            <!--Faculty select-->
                                             <div class="mt-20">
                                                 <label for="faculty-select">Select faculty</label>
-                                                <select class="selectpicker form-control" id="faculty-select" name="sellist1">
+                                                <select class="selectpicker form-control" id="faculty-select">
                                                     <option value="" selected disabled hidden>Please select</option>
                                                     <!--TODO: add real options-->
-                                                    <option>Faculty</option>
-                                                    <option>Faculty</option>
-                                                    <option>Faculty</option>
+                                                    @for (int i = 0; i < 5; i++)
+                                                    {
+                                                        <option>Faculty @i</option>
+                                                    }
                                                 </select>
                                             </div>
+                                            <!--Study program select-->
                                             <div class="mt-20">
-                                                <label for="studyprogram-select">Select faculty</label>
-                                                <select class="selectpicker form-control" id="studyprogram-select" name="sellist1">
+                                                <label for="studyprogram-select">Select study program</label>
+                                                <select class="selectpicker form-control" id="studyprogram-select">
                                                     <option value="" selected disabled hidden>Please select</option>
                                                     <!--TODO: add real options-->
-                                                    <option>Study Program</option>
-                                                    <option>Study Program</option>
-                                                    <option>Study Program</option>
+                                                    @for(int i=0; i < 5; i++)
+                                                    {
+                                                        <option>Study program @i</option>
+                                                    }
                                                 </select>
                                             </div>
                                         </div>
@@ -120,7 +126,7 @@
                         <div class="row">
                             <div class="col-sm-12 mt-20">
                                 <!--Review textarea-->
-                                <textarea style="margin-top:5px;" class="form-control" rows="3" id="comment" placeholder="Enter your review"></textarea>
+                                <textarea style="margin-top:5px;" class="form-control" id="review-text" placeholder="Enter your review"></textarea>
                                 <!--Submit button-->
                                 <button onclick="result()" type="button" class="btn btn-info" id="submit-btn">Submit</button>
                             </div>
@@ -129,10 +135,63 @@
                  </div>       
             </div>
         </div>
+            <!--COURSE TAB-->
             <div id="courseTab" class="tab-pane">
-                <h3>Course</h3>
-                <input type="checkbox" value="" />
+                <div class="container">
+                    <div class="row">
+                        <div class="review-container">
+                            <div class="col-sm-6 mt-20">
+                                <!--University select-->
+                                <label for="university-select-course">Select university</label>
+                                <select class="selectpicker form-control" id="university-select-course">
+                                    <option value="" selected disabled hidden>Please select</option>
+                                    @foreach (University uni in ViewBag.Universities)
+                                    {
+                                        <option>@uni.Title</option>
+                                    }
+                                </select>
+                                <!--Faculty select-->
+                                <div class="mt-20">
+                                    <label for="faculty-select-course">Select faculty</label>
+                                    <select class="selectpicker form-control" id="faculty-select-course">
+                                        <option value="" selected disabled hidden>Please select</option>
+                                        <!--TODO: add real options-->
+                                        @for (int i = 0; i < 5; i++)
+                                        {
+                                            <option>Faculty @i</option>
+                                        }
+                                    </select>
+                                </div>
+                                <!--Study Program select-->
+                                <div class="mt-20">
+                                    <label for="studyprogram-select-course">Select study program</label>
+                                    <select class="selectpicker form-control" id="studyprogram-select-course">
+                                        <option value="" selected disabled hidden>Please select</option>
+                                        <!--TODO: add real options-->
+                                        @for (int i = 0; i < 5; i++)
+                                        {
+                                            <option>Study program @i</option>
+                                        }
+                                    </select>
+                                </div>
+                                <!--Course select-->
+                                <div class="mt-20">
+                                    <label for="course-select">Select course</label>
+                                    <select class="selectpicker form-control" id="course-select">
+                                        <option value="" selected disabled hidden>Please select</option>
+                                        <!--TODO: add real options-->
+                                        @for (int i = 0; i < 5; i++)
+                                        {
+                                            <option>Course @i</option>
+                                        }
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+            <!--LECTURER TAB-->
             <div id="lecturerTab" class="tab-pane">
                             <h3>Lecturer</h3>
             </div>
@@ -160,7 +219,7 @@
         function result() {
             //Rating : Count
             //Review : Comment(id)
-            alert("Rating : " + count + "\nReview : " + document.getElementById("comment").value);
+            alert("Rating : " + count + "\nReview : " + document.getElementById("review-text").value);
         }
         function getSelectValue() {
             var selectedValue = document.getElementById("university-select").value;
