--- a/Views/Faculty.cshtml
+++ b/Views/Faculty.cshtml
@@ -62,9 +62,8 @@
                                 <p class="mr-5">
                                     <i class="fas fa-star"></i>
                                 </p>
-                                <!-- Add display of rating -->
                                 <p class="mr-5">
-                                    Rating #
+                                    Rating @ViewBag.StatsData.OveralRating
                                 </p>
                             </div>
                         </div>
