--- a/Assets/css/review.css
+++ b/Assets/css/review.css
@@ -8,20 +8,17 @@
     width: 100%;
     resize: none;
 }
+.review-textarea {
+    height: 190px;
+    width: 100%;
+    resize: none;
+}
 
 .selectpicker form-control{
     width: 200px;
 }
 
-.inlinelabel label {
-    /* Other styling... */
-    text-align: right;
-    clear: both;
-    float: left;
-    margin-right: 15px;
-}
-
-#submit-btn {
+.sub {
     width: 280px;
     margin-top: 20px;
 }
@@ -33,3 +30,45 @@
 .stars{
     font-size:20px;
 }
+
+.pad {
+    margin-left: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+    margin-right: 0px;
+}
+
+.slidecontainer{
+    width: 50%;
+    font-weight: bold;
+}
+
+.slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 15px;
+    border-radius: 5px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+
+    .slider::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        appearance: none;
+        width: 25px;
+        height: 25px;
+        border-radius: 50%;
+        background: blue;
+        cursor: pointer;
+    }
+
+    .slider::-moz-range-thumb {
+        width: 25px;
+        height: 25px;
+        border-radius: 50%;
+        background: blue;
+        cursor: pointer;
+    }
