--- a/Views/University/University.cshtml
+++ b/Views/University/University.cshtml
@@ -85,7 +85,13 @@
                 {
                 <div class="dorms-container card">
                     <h4>@dormitory.Title</h4>
-                    <div class="d-flex">
+                    <div class="d-flex flex-wrap">
+                        <div class="col-sm-12">
+                            @foreach (Address address in dormitory.Addresses)
+                            {
+                                <p>@address.ToString()</p>
+                            }
+                        </div>
                         <div class="d-flex mr-5">
                             <p class="mr-5">
                                 <i class="fas fa-star"></i>
