--- a/Views/StudyProgram/StudyProgram.cshtml
+++ b/Views/StudyProgram/StudyProgram.cshtml
@@ -40,7 +40,7 @@
         </div>
     </div>
         <div class="row">
-            <div class="col-sm-12">
+            <div class="col-sm-8">
                 <h3>Reviews (@ViewBag.StatsData.ReviewCount)</h3>
                 <div class="d-flex flex-wrap">
                     @foreach (Review review in ViewBag.StudyProgram.Reviews)
@@ -66,7 +66,34 @@
                     }
                 </div>
             </div>
-        </div>
+            <div class="col-sm-4">
+                <h3>Courses (@ViewBag.StudyProgram.Courses.Count)</h3>
+                <div class="flex-wrap">
+                    @foreach (Course course in ViewBag.StudyProgram.Courses)
+                    {
+                        <div class="course-container card">
+                            <a href="@Url.RouteUrl("course_page", new { id = course.Id })">
+                                <h3>@course.Title</h3>
+                            </a>
+                            <div class="d-flex">
+                                <div class="d-flex mr-5">
+                                    <p class="mr-5">
+                                        <i class="fas fa-star"></i>
+                                    </p>
+                                    <p class="mr-5">Rating #</p>
+                                </div>
+                                <div class="d-flex mr-5">
+                                    <p class="mr-5">
+                                        <i class="fas fa-book-reader"></i>
+                                    </p>
+                                    <p class="mr-5"># files</p>
+                                </div>
+                            </div>
+                        </div>
+                    }
+                </div>
+                </div>
+            </div>
     </div>
 
 
