Added various controls to lecturer tab
added stars, sliders (overall rating, competence, interesting, delivery,
personality) and textarea

--- a/Assets/css/review.css
+++ b/Assets/css/review.css
@@ -72,3 +72,12 @@
         background: blue;
         cursor: pointer;
     }
+
+.slider-span-right{
+    float: right !important;
+    padding-bottom: 5px;
+}
+
+.slider-span {
+    padding-bottom: 5px;
+}
