--- a/Views/Review.cshtml
+++ b/Views/Review.cshtml
@@ -126,7 +126,7 @@
                                     <!--Review textarea-->
                                     <textarea class="review-textarea" id="review-text" placeholder="Enter your review"></textarea>
                                     <!--Submit button-->
-                                    <button onclick="result()" type="button" class="btn btn-info sub" id="submit-btn">Submit</button>
+                                    <button onclick="result()" type="button" class="btn btn-info sub">Submit</button>
                                 </div>
                             </div>
                         </div>
@@ -217,25 +217,25 @@
                                 <!--Interesting-->
                                 <div class="mt-20">
                                     <div class="slidecontainer">
-                                        <span>Uninteresting</span>
-                                        <span style="float:right; padding-bottom:5px;">Interesting</span>
-                                        <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+                                        <span class="slider-span">Uninteresting</span>
+                                        <span class="slider-span-right" style="float:right">Interesting</span>
+                                        <input type="range" min="1" max="100" class="slider">
                                     </div>
                                 </div>
 
                                 <!--Theory-->
                                 <div class="mt-20">
                                     <div class="slidecontainer">
-                                        <span>Theory</span>
-                                        <span style="float:right; padding-bottom:5px;">Practice</span>
+                                        <span class="slider-span">Theory</span>
+                                        <span class="slider-span-right" style="float:right;">Practice</span>
                                         <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
                                     </div>
                                 </div>
                                 <!--Difficulty-->
                                 <div class="mt-20">
                                     <div class="slidecontainer">
-                                        <span>Easy</span>
-                                        <span style="float:right; padding-bottom:5px;">Difficult</span>
+                                        <span class="slider-span">Easy</span>
+                                        <span class="slider-span-right"style="float:right;">Difficult</span>
                                         <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
                                     </div>
                                 </div>
@@ -245,10 +245,8 @@
                             <div class="col-sm-12 mt-20">
                                 <!--Review textarea-->
                                 <textarea class="review-textarea" id="review-text-course" placeholder="Enter your review"></textarea>
-                                <div class="mt-20">
                                     <!--Submit button-->
                                     <button type="button" class="btn btn-info sub" id="course-submit-btn">Submit</button>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -293,7 +291,59 @@
                                         }
                                     </select>
                                 </div>
+                            </div>
+                            <div class="col-sm-6 mt-20">
+                                <!--Overall rating-->
+                                <label for="stars">Overall rating</label>
+                                <div class="stars">
+                                    @for (int i = 0; i < 10; i++)
+                                    {
+                                        <span onclick="starmark(this)" id="@i+overallLecturer" class="fa fa-star "></span>
+                                    }
+                                </div>
+                                <!--Personality-->
+                                <label for="stars">Personality</label>
+                                <div class="stars">
+                                    @for (int i = 0; i < 10; i++)
+                                    {
+                                        <span onclick="starmark(this)" id="@i+personalityLecturer" class="fa fa-star "></span>
+                                    }
+                                </div>
+                                <!--Competence-->
+                                <label for="stars">Competence</label>
+                                <div class="stars">
+                                    @for (int i = 0; i < 10; i++)
+                                    {
+                                        <span onclick="starmark(this)" id="@i+CompetenceLecturer" class="fa fa-star "></span>
+                                    }
+                                </div>
+                                <!--Delivery-->
+                                <label for="stars">Delivery</label>
+                                <div class="stars">
+                                    @for (int i = 0; i < 10; i++)
+                                    {
+                                        <span onclick="starmark(this)" id="@i+deliveryLecturer" class="fa fa-star "></span>
+                                    }
+                                </div>
+                                <!--Interesting-->
+                                <div class="mt-20">
+                                    <div class="slidecontainer">
+                                        <span class="slider-span">Uninteresting</span>
+                                        <span class="slider-span-right" style="float:right">Interesting</span>
+                                        <input type="range" min="1" max="100" class="slider">
+                                    </div>
+                                </div>
+                                <!--Strictness-->
+                                <div class="mt-20">
 
+                                </div>
+
+                            </div>
+                            <div class="col-sm-12 mt-20">
+                                <!--Review textarea-->
+                                <textarea class="review-textarea" id="review-text-course" placeholder="Enter your review"></textarea>
+                                    <!--Submit button-->
+                                    <button type="button" class="btn btn-info sub" id="course-submit-btn">Submit</button>
                             </div>
                         </div>
                     </div>
